// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render button correctly 1`] = `
.c0 {
  height: 50px;
  border-radius: 4px;
}

<Component
  onClick={[Function]}
  theme={
    Object {
      "error": "#FF9494",
      "light": "#dcdee091",
      "primary": "#4548fd",
      "secondary": "#ffffff",
      "strong": "#052c4b",
      "success": "#37da6b",
      "warning": "#f0d74d",
    }
  }
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "styles__StyleButton-sc-188dz6f-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "height:",
            [Function],
            ";border-radius:4px;",
            [Function],
          ],
        },
        "displayName": "styles__StyleButton",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "styles__StyleButton-sc-188dz6f-0",
        "target": "button",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    onClick={[Function]}
    theme={
      Object {
        "error": "#FF9494",
        "light": "#dcdee091",
        "primary": "#4548fd",
        "secondary": "#ffffff",
        "strong": "#052c4b",
        "success": "#37da6b",
        "warning": "#f0d74d",
      }
    }
  >
    <button
      className="c0"
      onClick={[Function]}
    >
      Hello World
    </button>
  </StyledComponent>
</Component>
`;

exports[`Button should render primary button correctly 1`] = `
.c0 {
  height: 50px;
  border-radius: 4px;
}

<Component
  onClick={[MockFunction]}
  theme={
    Object {
      "error": "#FF9494",
      "light": "#dcdee091",
      "primary": "#4548fd",
      "secondary": "#ffffff",
      "strong": "#052c4b",
      "success": "#37da6b",
      "warning": "#f0d74d",
    }
  }
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "styles__StyleButton-sc-188dz6f-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "height:",
            [Function],
            ";border-radius:4px;",
            [Function],
          ],
        },
        "displayName": "styles__StyleButton",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "styles__StyleButton-sc-188dz6f-0",
        "target": "button",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    onClick={[MockFunction]}
    theme={
      Object {
        "error": "#FF9494",
        "light": "#dcdee091",
        "primary": "#4548fd",
        "secondary": "#ffffff",
        "strong": "#052c4b",
        "success": "#37da6b",
        "warning": "#f0d74d",
      }
    }
  >
    <button
      className="c0"
      onClick={[MockFunction]}
    >
      Hello World
    </button>
  </StyledComponent>
</Component>
`;
